2025-04-29T01:44:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14721518443 # 945
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-29
* notice: last 14d: unq all: 30 72
* notice: prev accum: outdated-unq outdated-all / unq all: 4102 8751 / 4152 8823
* notice: next accum: outdated-unq outdated-all / unq all: 4102 8751 / 4152 8824
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +11 +18 -0 -0 / 11 18
* notice: removed / changed dates: [] / [2025-04-15 2025-04-28]

2025-04-28T12:50:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14708232739 # 944
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-28
* notice: last 14d: unq all: 30 72
* notice: prev accum: outdated-unq outdated-all / unq all: 4101 8750 / 4141 8806
* notice: next accum: outdated-unq outdated-all / unq all: 4102 8751 / 4152 8823
* notice: prev exec diff / last date diff / accum: unq all: +11 +17 -0 -0 / +11 +17 -0 -0 / 11 17
* notice: removed / changed dates: [2025-04-14] / [2025-04-28]

2025-04-28T01:46:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14698509470 # 943
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-28
* notice: last 14d: unq all: 24 56
* notice: prev accum: outdated-unq outdated-all / unq all: 4101 8750 / 4138 8801
* notice: next accum: outdated-unq outdated-all / unq all: 4101 8750 / 4141 8806
* notice: prev exec diff / last date diff / accum: unq all: +3 +5 -0 -0 / +4 +6 -0 -0 / 4 6
* notice: removed / changed dates: [] / [2025-04-27]

2025-04-27T12:37:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14692123045 # 942