@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-29T01:44:09Z",
-  "count_outdated" : 8751,
-  "uniques_outdated" : 4102,
-  "count" : 8824,
-  "uniques" : 4152,
+  "timestamp" : "2025-04-29T12:44:30Z",
+  "count_outdated" : 8753,
+  "uniques_outdated" : 4103,
+  "count" : 8825,
+  "uniques" : 4153,
   "clones" : [
-    {
-      "timestamp": "2025-04-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-16T00:00:00Z",
       "count": 12,
@@ -130,6 +121,15 @@
       "uniques": 11,
       "uniques_minmax": [ 11, 11 ],
       "uniques_decinc": [ 0, 11 ]
+    },
+    {
+      "timestamp": "2025-04-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
