@@ -3,11 +3,6 @@
   "uniques": 30,
   "clones": [
     {
-      "timestamp": "2025-04-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-04-16T00:00:00Z",
       "count": 12,
       "uniques": 9
@@ -71,6 +66,11 @@
       "timestamp": "2025-04-28T00:00:00Z",
       "count": 18,
       "uniques": 11
+    },
+    {
+      "timestamp": "2025-04-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
